--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <video id="miVideo" controls autoplay>
     <!-- 👇 Cambia 'video.mp4' por el nombre real de tu archivo de video -->
-    <source src="video.mp4" type="video/mp4">
+    <source src="Video1.mp4" type="Video1/mp4">
     Tu navegador no soporta videos en HTML5.
   </video>
 
