--- a/index.html
+++ b/index.html
@@ -4,12 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video con redirección</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    }
+    video {
+      max-width: 90%;
+      border: 5px solid #fff;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.8);
+    }
+    p {
+      margin-top: 15px;
+      font-size: 1.1rem;
+      opacity: 0.9;
+    }
+  </style>
 </head>
-<body style="display:flex;justify-content:center;align-items:center;height:100vh;flex-direction:column;">
+<body>
+  <h1>🎬 Bienvenido a la demo</h1>
+
   <video id="miVideo" controls autoplay>
     <source src="Video1.mp4" type="Video1/mp4">
     Tu navegador no soporta videos en HTML5.
   </video>
+
+  <p>Cuando el video termine, serás redirigido automáticamente.</p>
 
   <script>
     const video = document.getElementById('miVideo');
@@ -19,4 +53,5 @@
   </script>
 </body>
 </html>
+
 
