--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>🎬 Bienvenido a la demo8</h1>
+  <h1>🎬 Bienvenido a la demo</h1>
 
   <video id="miVideo" controls autoplay>
     <source src="Video2.mp4" type="Video2/mp4">
